Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Account_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Text__c</fullName>
    <formula>if(RecordType.Id = &quot;0120Y000000UW9m&quot;,&quot;Blue Arrow&quot;, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Text</label>
    <type>Text</type>
</CustomField>