Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Account_temp_Margin__c.field-meta.xml
<CustomField>
    <fullName>Account_temp_Margin__c</fullName>
    <label>Account Temp Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>