Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>IF(RecordType.Name = &quot;2nd Tier Supplier&quot;,IMAGE(&quot;/resource/Account2ndTierSupplier&quot;, &quot;&quot;) ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>