Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Additional_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Additional_Compliance__c</fullName>
    <label>Additional Compliance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Additional_Compliance</valueSetName>
    </valueSet>
</CustomField>