Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Average_Worker_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Worker_Rating__c</fullName>
    <label>Average Worker Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>