Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/AWR_Alert__c.field-meta.xml
<CustomField>
    <fullName>AWR_Alert__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the Client is Eligible for AWR the consultant will tick this box to ensure the account owner gets an email for candidates eligible for AWR.</description>
    <inlineHelpText>Check this to notify the account owner of any new AWR alerts for candidates</inlineHelpText>
    <label>AWR Alert</label>
    <type>Checkbox</type>
</CustomField>