Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Self Billing</fullName>
            </value>
            <value>
                <fullName>Special Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>