Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Brand_Logo__c.field-meta.xml
<CustomField>
    <fullName>Brand_Logo__c</fullName>
    <formula>IF(Brand__c  = &apos;Blue Arrow&apos;,IMAGE(&quot;/resource/BASmall&quot;, &quot;&quot;),
IF(Brand__c  = &apos;SRG&apos;,IMAGE(&quot;/resource/SRGLogo&quot;,&quot;&quot;),
IF(Brand__c  = &apos;Impellam&apos;,IMAGE(&quot;/resource/ImpellamLogo&quot;,&quot;&quot;),
IF(Brand__c  = &apos;MGG&apos;,IMAGE(&quot;/resource/MedacsLogo&quot;,&quot;&quot;),
IF(Brand__c  = &apos;Tate&apos;,IMAGE(&quot;/resource/TateLogo&quot;,&quot;&quot;),
IF(Brand__c  = &apos;Carbon60&apos;,IMAGE(&quot;/resource/C60&quot;,&quot;&quot;),
IF(Brand__c  = &apos;Lorien&apos;,IMAGE(&quot;/resource/LorienLogo&quot;,&quot;&quot;),
IF(Brand__c  = &apos;Guidant&apos;,IMAGE(&quot;/resource/GuidantLogo&quot;,&quot;&quot;),
&quot;&quot;))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Logo</label>
    <type>Text</type>
</CustomField>