Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/BSC_Payrolled_Client__c.field-meta.xml
<CustomField>
    <fullName>BSC_Payrolled_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BSC Payrolled Client</label>
    <type>Checkbox</type>
</CustomField>