Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Business_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Sub_Type__c</fullName>
    <label>Business Sub Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Category</valueSetName>
    </valueSet>
</CustomField>