Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Central_H_S_Contract__c.field-meta.xml
<CustomField>
    <fullName>Central_H_S_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Central H&amp;S Contract</label>
    <type>Checkbox</type>
</CustomField>