Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Check_Top_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Check_Top_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Top Prospect</label>
    <type>Checkbox</type>
</CustomField>