Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Client_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Client_Charge_Rate__c</fullName>
    <label>Client Charge Rate £</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>