Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Client_Ref__c.field-meta.xml
<CustomField>
    <fullName>Client_Ref__c</fullName>
    <label>Client Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>