Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Contracts_managed_by__c.field-meta.xml
<CustomField>
    <fullName>Contracts_managed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracts managed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>