Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Default_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate_Card__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Rate Card</label>
    <referenceTo>sirenum__Rate_Card__c</referenceTo>
    <relationshipLabel>Accounts (Default Rate Card)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>