Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Do_Not_Allow_Job_Roles_to_be_Created__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Allow_Job_Roles_to_be_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Role Creation Restricted</label>
    <type>Checkbox</type>
</CustomField>