Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Do_Not_Allow_Sites_to_be_created__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Allow_Sites_to_be_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sites Creation Restricted</label>
    <type>Checkbox</type>
</CustomField>