Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If an account is selected as &quot;Do Not Contact&quot;, then the contacts also should not be contacted.</description>
    <inlineHelpText>If an account is selected as &quot;Do Not Contact&quot;, then the contacts also should not be contacted.</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>