Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Enable_Worker_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>Enable_Worker_Endorsement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Preferred Worker</label>
    <type>Checkbox</type>
</CustomField>