Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Estimated_Perm_Vacancies__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Perm_Vacancies__c</fullName>
    <label>Estimated Perm Vacancies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>