Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Estimated_Temp_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Temp_Requirements__c</fullName>
    <label>Estimated Temp Requirements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>