Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Feedback_Questions__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box to allow Feedback Questions to be asked.</inlineHelpText>
    <label>Feedback Questions</label>
    <type>Checkbox</type>
</CustomField>