Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/First_Placement_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Placement_Date__c</fullName>
    <label>First Placement Date</label>
    <type>Date</type>
</CustomField>