Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/First_Shift__c.field-meta.xml
<CustomField>
    <fullName>First_Shift__c</fullName>
    <label>First Shift</label>
    <type>Date</type>
</CustomField>