Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/First_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>First_Timesheet__c</fullName>
    <label>First Timesheet</label>
    <type>Date</type>
</CustomField>