Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/GLAA__c.field-meta.xml
<CustomField>
    <fullName>GLAA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the account got a Gangmasters and Labour Abuse Authority licence?</inlineHelpText>
    <label>GLAA Licence</label>
    <type>Checkbox</type>
</CustomField>