Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Has_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Has_Inquiry__c</fullName>
    <formula>IF(ISBLANK( Inquiry__r.Count_of_Inquiries__c ), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <label>Has Inquiry</label>
    <type>Text</type>
</CustomField>