Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Invoice_PO_Number_Format__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PO_Number_Format__c</fullName>
    <label>Invoice PO Number Format</label>
    <length>20</length>
    <type>Text</type>
</CustomField>