Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>IP_Business_Type__c</fullName>
    <description>Types of business the business undertakes</description>
    <inlineHelpText>Select the types of business the client will require our support for</inlineHelpText>
    <label>Business Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IP_Business_Type</valueSetName>
    </valueSet>
</CustomField>