Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_BusinessIncorporationNumber__c.field-meta.xml
<CustomField>
    <fullName>IP_BusinessIncorporationNumber__c</fullName>
    <description>The Business Incorporation number provided when registering with companies house</description>
    <inlineHelpText>The Business Incorporation number provided when registering with companies house</inlineHelpText>
    <label>Business Incorporation Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>