Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_ClientIDLegacySystem__c.field-meta.xml
<CustomField>
    <fullName>IP_ClientIDLegacySystem__c</fullName>
    <description>This field is used if the client has already been created and we need to use this ID for interfacing data</description>
    <externalId>true</externalId>
    <inlineHelpText>Use this field where the Account has already been set-up in another system.</inlineHelpText>
    <label>Client ID (Legacy)</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>