Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_CompanyRegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>IP_CompanyRegistrationNo__c</fullName>
    <externalId>true</externalId>
    <label>Company Registration No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>