Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_CompetencyRestriction__c.field-meta.xml
<CustomField>
    <fullName>IP_CompetencyRestriction__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked then the creation, edit, and deletion of competencies linked to this account are restricted to permitted users.</inlineHelpText>
    <label>Account Competency Restriction</label>
    <type>Checkbox</type>
</CustomField>