Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_CreditCheckfieldchanged__c.field-meta.xml
<CustomField>
    <fullName>IP_CreditCheckfieldchanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Check field changed</label>
    <type>Checkbox</type>
</CustomField>