Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_InvoiceQueryValue__c.field-meta.xml
<CustomField>
    <fullName>IP_InvoiceQueryValue__c</fullName>
    <label>Total Invoice(s) Query Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>