Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_InvoicingMethod__c.field-meta.xml
<CustomField>
    <fullName>IP_InvoicingMethod__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Hourly Percentage</fullName>
            </value>
            <value>
                <fullName>Hourly Commission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>