Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_NationalAccountID__c.field-meta.xml
<CustomField>
    <fullName>IP_NationalAccountID__c</fullName>
    <description>Account ID used by national accounts for this client</description>
    <inlineHelpText>Account ID used by National Accounts for this Account</inlineHelpText>
    <label>National Account ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>