Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_NationalAccountName__c.field-meta.xml
<CustomField>
    <fullName>IP_NationalAccountName__c</fullName>
    <description>Field to store the name of the national account the client belongs to</description>
    <inlineHelpText>The name of the National Account</inlineHelpText>
    <label>National Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>