Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_Perm_Contractual_Terms__c.field-meta.xml
<CustomField>
    <fullName>IP_Perm_Contractual_Terms__c</fullName>
    <inlineHelpText>Please confirm whether the Perm Contract of business is under Standard Blue Arrow Terms</inlineHelpText>
    <label>Perm Contractual Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Terms</fullName>
            </value>
            <value>
                <fullName>Non-Standard Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>