Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_Perm_Non_Standard_Terms_Details__c.field-meta.xml
<CustomField>
    <fullName>IP_Perm_Non_Standard_Terms_Details__c</fullName>
    <inlineHelpText>If you have signed non-standard perm terms &amp; conditions with the Client please provide the detail</inlineHelpText>
    <label>Perm Non-Standard Terms Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>