Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_PORequired__c.field-meta.xml
<CustomField>
    <fullName>IP_PORequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchase Order required</description>
    <inlineHelpText>check if Purchase Order is required on all assignments for this client required</inlineHelpText>
    <label>PO required</label>
    <type>Checkbox</type>
</CustomField>