Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_PreAWRWTRValue__c.field-meta.xml
<CustomField>
    <fullName>IP_PreAWRWTRValue__c</fullName>
    <inlineHelpText>The percentage used to calculate the WTR Charge (e.g. Holiday Accrual) for candidates working on 5 line invoicing clients but not yet reached parity.</inlineHelpText>
    <label>Pre-WTR Charge Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>