Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_PublicSectorSupplierOrClient__c.field-meta.xml
<CustomField>
    <fullName>IP_PublicSectorSupplierOrClient__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If client provides evidence that they are small business and are out of scope for IR35 un-check this box</inlineHelpText>
    <label>IR35 In Scope?</label>
    <type>Checkbox</type>
</CustomField>