Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_SalesLedgerNumber__c.field-meta.xml
<CustomField>
    <fullName>IP_SalesLedgerNumber__c</fullName>
    <description>Billing system ID for client</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the Sales Ledger Number for the Account</inlineHelpText>
    <label>SL Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>