Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_Small_Business_Evidence_Provided__c.field-meta.xml
<CustomField>
    <fullName>IP_Small_Business_Evidence_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of IR35</description>
    <label>Small Business Evidence Provided</label>
    <type>Checkbox</type>
</CustomField>