Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_SupplierReference__c.field-meta.xml
<CustomField>
    <fullName>IP_SupplierReference__c</fullName>
    <label>2nd Tier Supplier Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>