Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_Temp_Contractual_Terms__c.field-meta.xml
<CustomField>
    <fullName>IP_Temp_Contractual_Terms__c</fullName>
    <inlineHelpText>Please confirm whether the Temp Contract of Business is under Standard Blue Arrow Terms</inlineHelpText>
    <label>Temp Contractual Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Terms</fullName>
                <default>true</default>
                <label>Standard Terms</label>
            </value>
            <value>
                <fullName>Non-Standard Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>