Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/IP_Temp_Non_Standard_Terms_Details__c.field-meta.xml
<CustomField>
    <fullName>IP_Temp_Non_Standard_Terms_Details__c</fullName>
    <inlineHelpText>If you have signed non-standard temp terms &amp; conditions with the Client please provide the details.</inlineHelpText>
    <label>Temp Non-Standard Terms Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>