Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Last_Branch_Supplied__c.field-meta.xml
<CustomField>
    <fullName>Last_Branch_Supplied__c</fullName>
    <label>Last Branch Supplied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>