Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Last_Shift__c.field-meta.xml
<CustomField>
    <fullName>Last_Shift__c</fullName>
    <label>Last Shift</label>
    <type>Date</type>
</CustomField>