Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Last_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Last_Timesheet__c</fullName>
    <label>Last Timesheet</label>
    <type>DateTime</type>
</CustomField>