Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Local_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Local_Competitor__c</fullName>
    <label>Local Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>