Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Managed_Account__c.field-meta.xml
<CustomField>
    <fullName>Managed_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to define managed accounts for validation rule purposes</description>
    <label>Rate Card Restriction</label>
    <type>Checkbox</type>
</CustomField>