Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee__c</fullName>
    <label>Management Fee (%/hr)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>