Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Management_Fee_hr__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_hr__c</fullName>
    <inlineHelpText>Management fee chargeable to supplier for using the VMS service</inlineHelpText>
    <label>Management Fee (£/hr)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>