Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Misc_Legacy_Data__c.field-meta.xml
<CustomField>
    <fullName>Misc_Legacy_Data__c</fullName>
    <description>This is additional data migrated from the legacy system not categorized into its own fields or tables.</description>
    <label>Misc Legacy Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>