Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/National_Competitor__c.field-meta.xml
<CustomField>
    <fullName>National_Competitor__c</fullName>
    <label>National Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>24/7</fullName>
            </value>
            <value>
                <fullName>Adecco</fullName>
            </value>
            <value>
                <fullName>Adkins &amp; Cheurfi</fullName>
            </value>
            <value>
                <fullName>Admiral Group</fullName>
            </value>
            <value>
                <fullName>Berkeley Scott Group</fullName>
            </value>
            <value>
                <fullName>Best Connection</fullName>
            </value>
            <value>
                <fullName>Bia People Ltd</fullName>
            </value>
            <value>
                <fullName>Blue Arrow Personnel Services</fullName>
            </value>
            <value>
                <fullName>Brook Street</fullName>
            </value>
            <value>
                <fullName>Cartwheel Recruitment Ltd</fullName>
            </value>
            <value>
                <fullName>Catering Services International</fullName>
            </value>
            <value>
                <fullName>Contract Options Ltd</fullName>
            </value>
            <value>
                <fullName>Cordant</fullName>
            </value>
            <value>
                <fullName>Driverhire</fullName>
            </value>
            <value>
                <fullName>Evolve Hospitality Recruitment Ltd</fullName>
            </value>
            <value>
                <fullName>Flexy</fullName>
            </value>
            <value>
                <fullName>Hays</fullName>
            </value>
            <value>
                <fullName>Host Staffing</fullName>
            </value>
            <value>
                <fullName>illume</fullName>
            </value>
            <value>
                <fullName>Indeed Flex</fullName>
            </value>
            <value>
                <fullName>Interaction</fullName>
            </value>
            <value>
                <fullName>Jark</fullName>
            </value>
            <value>
                <fullName>Kelly</fullName>
            </value>
            <value>
                <fullName>Mach Recruitment</fullName>
            </value>
            <value>
                <fullName>Manpower</fullName>
            </value>
            <value>
                <fullName>MSSHOSP Ltd T/A Mint People</fullName>
            </value>
            <value>
                <fullName>Office Angels</fullName>
            </value>
            <value>
                <fullName>Office Angels Ltd</fullName>
            </value>
            <value>
                <fullName>Off to Work</fullName>
            </value>
            <value>
                <fullName>Olerio Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>