Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Payment_in_Advance__c.field-meta.xml
<CustomField>
    <fullName>Payment_in_Advance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment in Advance</label>
    <type>Checkbox</type>
</CustomField>