Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/PO_Overwrite_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>PO_Overwrite_Exclusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Overwrite Exclusion</label>
    <type>Checkbox</type>
</CustomField>