Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Portal_Site_Management__c.field-meta.xml
<CustomField>
    <fullName>Portal_Site_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Site Management</label>
    <type>Checkbox</type>
</CustomField>