Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Portal_Username__c.field-meta.xml
<CustomField>
    <fullName>Portal_Username__c</fullName>
    <label>Portal Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>