Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Public_Framework__c.field-meta.xml
<CustomField>
    <fullName>Public_Framework__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Framework</label>
    <type>Checkbox</type>
</CustomField>