Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Purchase_Order_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Purchase Order is mandatory to create Timesheets</inlineHelpText>
    <label>Purchase Order Mandatory</label>
    <type>Checkbox</type>
</CustomField>