Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Purchase_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Account utilities Purchase Order numbers</inlineHelpText>
    <label>Purchase Order Required</label>
    <type>Checkbox</type>
</CustomField>