Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Requiring_PO__c.field-meta.xml
<CustomField>
    <fullName>Requiring_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiring PO?</label>
    <type>Checkbox</type>
</CustomField>