Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Shift_SLA_Days__c.field-meta.xml
<CustomField>
    <fullName>Shift_SLA_Days__c</fullName>
    <label>Blue Arrow SLA (Hrs)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>