Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/sirenum__Clone_Rates_on_New_Placements__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Clone_Rates_on_New_Placements__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, newly created placements will have their payroll configuration copied from the account-level configuration.</inlineHelpText>
    <label>Clone Rates on New Contracts</label>
    <type>Checkbox</type>
</CustomField>