Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Sirenum_Links_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Sirenum_Links_Restriction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sirenum Links Restriction</label>
    <type>Checkbox</type>
</CustomField>