Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Supplier_Flat_Fee__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Flat_Fee__c</fullName>
    <label>Supplier Charge Rate £</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>