Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Supplier_Percentage_Fee__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Percentage_Fee__c</fullName>
    <label>Supplier Charge Rate %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>