Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Supply_Type__c.field-meta.xml
<CustomField>
    <fullName>Supply_Type__c</fullName>
    <label>Supply Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perm Supply</fullName>
            </value>
            <value>
                <fullName>Temp Supply</fullName>
            </value>
            <value>
                <fullName>Both Perm and Temp Supply</fullName>
            </value>
            <value>
                <fullName>Payroll Services Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>