Frankbelford/uatv1ba/force-app/main/default/objects/Account/fields/Top_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Top_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Prospect</label>
    <type>Checkbox</type>
</CustomField>